<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/app_bar_height"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp">



    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="@dimen/profile_size"
        android:layout_height="@dimen/profile_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_profile"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="none"
            android:hint="@string/identification_name"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Andro"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_name"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="none"
            android:hint="@string/identification_last_name"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Krezić"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_first_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_last_name"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/text_first_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="none"
            android:hint="@string/identification_birth_date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Krezić"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_second_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_first_input"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/text_second_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="none"
            android:hint="@string/identification_country"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Krezić"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_third_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_second_input"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/text_third_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="none"
            android:hint="@string/identification_email"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Krezić"/>

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
</RelativeLayout>